--- a/.gitignore
+++ b/.gitignore
@@ -174,13 +174,6 @@ cython_debug/
 crash.log
 crash.*.log
 
-# Exclude all .tfvars files, which are likely to contain sensitive data, such as
-# password, private keys, and other secrets. These should not be part of version 
-# control as they are data points which are potentially sensitive and subject 
-# to change depending on the environment.
-*.tfvars
-*.tfvars.json
-
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
 override.tf
@@ -206,4 +199,5 @@ bastion.pub
 
 **/data/mysql
 **/data/redis
-terraform
+**/terraform/builds
+**.tfplan
